--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.25",
+    "@types/styled-system": "^5.1.15",
     "sass": "^1.53.0"
   }
 }
